tests/reject/map_del_removed.hi
# B5: map_del was removed in favour of m[k] sugar; a user call (bare statement,
# the form that previously slipped past hierc0's parse_atom check) must be rejected.
fn main():
    m := []string: int
    m["a"] = 1
    map_del(m, "a")
